--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit bootstrap="./tests/bootstrap.php" colors="true">
+<phpunit bootstrap="./vendor/autoload.php" colors="true">
     <testsuite name="MercyfulFate Test Suite">
         <directory>./tests/library</directory>
     </testsuite>
-    <filter>
-        <whitelist>
-            <directory suffix=".php">./library/Payment</directory>
-        </whitelist>
-    </filter>
 </phpunit>
