Reorganizes project. I'm more comfortable this way anymore

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "autoload": {
         "psr-0": 
             {
-            "MercyfulFate\\": "library/"
+            "MercyfulFate\\": "src/"
         }
     }
 }
